--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 			<img src="images/logo.png" class="search-img">
 			<br>
 			<span class="orci">ORCIsearch</span>
-			<form>
-			<input type="search" class="search-box" autofocus><button class="btn-search"n type="submit"><i class="fa fa-search"></i></button>
+			<form method="get" action="http://www.google.com/search">
+			<input type="text" class="search-box" autofocus><button class="btn-search"n type="submit"><i class="fa fa-search"></i></button>
 		</form>
 		<p class="search-intro">The search engine that learns from you. <a href="#learn" class="search-link">Learn More.</a></p>
 		<p><a href="#">हिंदी </a><a href="#">मराठी </a><a href="#">اردو </a><a href="#">తెలుగు </a><a href="#">বাঙালি </a><a href="#">ગુજરાતી </a><a href="#">తెలుగు </a><a href="#">தமிழ் </a></p>
@@ -31,7 +31,7 @@
 		<div class="c-first">
 			<p class="c-text">It learns from you</p>
 			<p class="c-text-p">Ever thought of a search engine in a language other than english?<br>No? ORCI has it.</p>
-			<button class="btn-hp">Make ORCI your homepage</button>
+			<button class="btn-hp fromCenter">Make ORCI your homepage</button>
 		</div>
 	</div>
 
