--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 			<img src="images/logo.png" class="search-img">
 			<br>
 			<span class="orci">ORCIsearch</span>
-			<form method="get" action="http://www.google.com/search">
-			<input type="text" class="search-box" autofocus><button class="btn-search"n type="submit"><i class="fa fa-search"></i></button>
+			<form method="link" action="result.html">
+			<input type="text" class="search-box" autofocus><button class="btn-search" style="cursor:pointer"><i class="fa fa-search"></i></button>
 		</form>
 		<p class="search-intro">The search engine that learns from you. <a href="#learn" class="search-link">Learn More.</a></p>
 		<p><a href="#" class="lnk">हिंदी </a><a href="#" class="lnk">मराठी </a><a href="#" class="lnk">اردو </a><a href="#" class="lnk">తెలుగు </a><a href="#" class="lnk">বাঙালি </a><a href="#" class="lnk">ગુજરાતી </a><a href="#" class="lnk">తెలుగు </a><a href="#" class="lnk">தமிழ் </a></p>
