--- a/result.html
+++ b/result.html
@@ -10,21 +10,107 @@
 <body>
 <div class="nav-top">
 	<div class="img-top"><img src="images/logo.png" class="img"></div>
-	<div><form method="get" action="http://www.google.com/search">
-			<input type="text" class="search-box" autofocus><button class="btn-search"n type="submit"><i class="fa fa-search"></i></button>
+	<div><form>
+			<input type="text" class="search-box"><button class="btn-search"><i class="fa fa-search"></i></button>
 		</form>
 	</div>
 </div>
 
 <div class="page">
 
+	<a href="http://exunclan.com" class="s-lnk">
 	<div class="s-result">
-		<p class="head">Exun Clan
+		<p class="head"><b>Exun</b> Clan
 		</p>
 		<p class="text">
-			2016. exun 2016 was a huge success, with over 1800 participants from 60+ schools. Delhi public school, Vasant Kunj bagged the overall
+			2016. Exun 2016 was a huge success, with over 1800 participants from 60+ schools. Delhi public school, Vasant Kunj bagged the overall
 		</p>
+		<p class="lnk">exunclan.com</p>
 	</div>
+	</a>
+
+	<a href="https://www.youtube.com/watch?v=rsqanOG50fI" class="s-lnk">
+	<div class="s-result">
+		<p class="head"><b>Exun</b> 2015 - Intro Video
+		</p>
+		<p class="text">
+			<div class="cont">
+				<div><a href="https://www.youtube.com/watch?v=rsqanOG50fI"><img src="images/exun.jpg" class="thumb"></a></div>
+			<div class="b">
+			The Official Introduction Video of D.P.S.R.K.Puram's Annual IT symposium Exun 2015. Software used: After Effects, Adobe Photoshop, and Audacity.</div>
+		</p></div>
+		<p class="lnk">https://www.youtube.com/watch?v=rsqanOG50fI</p>
+	</div>
+	</a>
+	<a href="https://www.facebook.com/events/919812214826517/" class="s-lnk">
+	<div class="s-result">
+		<p class="head"><b>Exun</b> 2017 - facebook.com
+		</p>
+		<p class="text">
+			It's here. Exun 2017, the 22nd iteration of Exun, will be the biggest Exun has ever been with 14 events and thousands of participants coming together...
+		</p>
+		<p class="lnk">https://www.facebook.com/events/919812214826517/</p>
+	</div>
+	</a>
+		<a href="http://lnexun.com" class="s-lnk">
+	<div class="s-result">
+		<p class="head">ln(exun) | Natural log of <b>Exun</b> – Computer club of DPS RK Puram
+		</p>
+		<p class="text">
+			Inter-School IT Symposium Silico Battles v13.1 was held at Ahlcon Public School, Mayur Vihar, New Delhi on 2-3 November, 2017.Exun Clan bagged the Overall Trophy.
+		</p>
+		<p class="lnk">lnexun.com</p>
+	</div>
+	</a>
+		<a href="https://www.facebook.com/ExunClan/posts/187601471294197" class="s-lnk">
+	<div class="s-result">
+		<p class="head"><b>Exun</b> Clan - <b>Exun</b> Clan is proud to be hosting... | Facebook
+		</p>
+		<p class="text">
+			Exun Clan is proud to be hosting DeCryptonite, the online cryptic teasure hunt for the Inter-DPS IT Festival. Think you can crack the levels? Head over...
+		</p>
+		<p class="lnk">https://www.facebook.com/ExunClan/posts/187601471294197</p>
+	</div>
+	</a>
+		<a href="https://in.linkedin.com/company/exun-clan" class="s-lnk">
+	<div class="s-result">
+		<p class="head"><b>Exun</b> Clan | LinkedIn
+		</p>
+		<p class="text">
+			Learn about working at Exun Clan. Join LinkedIn today for free. See who you know at Exun Clan, leverage your professional network, and get hired.		</p>
+		<p class="lnk">https://in.linkedin.com/company/exun-clan</p>
+	</div>
+	</a>
+		<a href="https://www.eventshigh.com/detail/delhi/7442b159a59d233bfd0443b5bb4545e6-exun-2017" class="s-lnk">
+	<div class="s-result">
+		<p class="head"><b>Exun</b> 2017 at R K Puram, Delhi - Events High
+		</p>
+		<p class="text">
+			It's here. Exun 2017, the 22nd iteration of Exun, will be the biggest Exun has ever been with 14 events and thousands of participants coming together to compete ...
+		</p>
+		<p class="lnk">https://www.eventshigh.com/detail/delhi/7442b159a59d233bfd0443b5bb4545e6-exun-2017</p>
+	</div>
+	</a>
+		<a href="http://exunclan.com/alumni/" class="s-lnk">
+	<div class="s-result">
+		<p class="head">Members | <b>Exun</b> Clan
+		</p>
+		<p class="text">
+			ExLink. Exun isn't just something we do at school, it becomes a part of who we are. The ExLink program facilitates networking of students with Exun alumni.
+		</p>
+		<p class="lnk">exunclan.com/alumni/</p>
+	</div>
+	</a>
+		<a href="http://exunclan.com" class="s-lnk">
+	<div class="s-result">
+		<p class="head"><b>Exun</b> Clan
+		</p>
+		<p class="text">
+			2016. Exun 2016 was a huge success, with over 1800 participants from 60+ schools. Delhi public school, Vasant Kunj bagged the overall
+		</p>
+		<p class="lnk">exunclan.com</p>
+	</div>
+	</a>
 
 </div>
 </body>
