--- a/result.html
+++ b/result.html
@@ -8,12 +8,15 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 <body>
+	<!--https://www.youtube.com/watch?v=O5mte-tqKmQ-->
 <div class="nav-top">
 	<div class="img-top"><img src="images/logo.png" class="img"></div>
-	<div><form>
-			<input type="text" class="search-box"><button class="btn-search"><i class="fa fa-search"></i></button>
-		</form>
+	<div style="width: 100%; display: flex;"><form>
+			<input type="text" class="search-box" value="exun"><button class="btn-search"><i class="fa fa-search"></i></button>
+		</form></div>
+	<div><a href="index.html"><i class="fa fa-home fa-2x top-icon" style="float: right; color: #666; padding-top: 10px;"></i></a>
 	</div>
+
 </div>
 
 <div class="page">
@@ -101,17 +104,14 @@
 		<p class="lnk">exunclan.com/alumni/</p>
 	</div>
 	</a>
-		<a href="http://exunclan.com" class="s-lnk">
-	<div class="s-result">
-		<p class="head"><b>Exun</b> Clan
-		</p>
-		<p class="text">
-			2016. Exun 2016 was a huge success, with over 1800 participants from 60+ schools. Delhi public school, Vasant Kunj bagged the overall
-		</p>
-		<p class="lnk">exunclan.com</p>
-	</div>
-	</a>
+</div>
 
+
+
+<!--footer-->
+<div class="footer" align="center">
+	<a class="last" href="#">Privacy and Cookies</a> | <a class="last" href="#">Legal</a> | <a class="last" href="#">Help</a> <span style="float: right; padding-right: 20px;">© 2017 ORCI
+</span>
 </div>
 </body>
 </html>
