--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<input type="text" class="search-box" autofocus><button class="btn-search" style="cursor:pointer"><i class="fa fa-search"></i></button>
 		</form>
 		<p class="search-intro">The search engine that learns from you. <a href="#learn" class="search-link">Learn More.</a></p>
-		<p><a href="#" class="lnk">हिंदी </a><a href="#" class="lnk">मराठी </a><a href="#" class="lnk">اردو </a><a href="#" class="lnk">తెలుగు </a><a href="#" class="lnk">বাঙালি </a><a href="#" class="lnk">ગુજરાતી </a><a href="#" class="lnk">తెలుగు </a><a href="#" class="lnk">தமிழ் </a></p>
+		<p class="abc">ORCI is offered in: <a href="#" class="lnk">हिंदी </a><a href="#" class="lnk">मराठी </a><a href="#" class="lnk">اردو </a><a href="#" class="lnk">తెలుగు </a><a href="#" class="lnk">বাঙালি </a><a href="#" class="lnk">ગુજરાતી </a><a href="#" class="lnk">తెలుగు </a><a href="#" class="lnk">தமிழ் </a></p>
 		</div>	
 				<span class="arrow-btm">
 			<a href="#learn" class="smoothscroll"><i class="fa fa-angle-double-down fa-2x icon-arrow"></i></a>
@@ -48,6 +48,17 @@
 			<p class="c-text">Supported in over 300 languages</p>
 			<p class="c-text-p">Ever thought of a search engine in a language other than english?<br>No? ORCI has it.</p>
 			<button class="btn-hp">Make ORCI your search engine</button>
+		</div>
+	</div>
+
+	<div class="c-four">
+		<div class="c-first">
+			<p class="c-text">Product Video</p>
+			<p class="c-text-p">Howzatt?</p>
+			<button class="btn-hp">Make ORCI your search engine</button>
+		</div>
+		<div>
+			<iframe width="672" height="377" src="https://www.youtube.com/embed/O5mte-tqKmQ?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 		</div>
 	</div>
 
