--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<button class="btn-hp">Make ORCI your search engine</button>
 		</div>
 		<div>
-			<iframe width="672" height="377" src="https://www.youtube.com/embed/O5mte-tqKmQ?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+			<iframe class="vid" width="672" height="377" src="https://www.youtube.com/embed/O5mte-tqKmQ?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 		</div>
 	</div>
 
