--- a/result.html
+++ b/result.html
@@ -14,7 +14,7 @@
 	<div style="width: 100%; display: flex;"><form>
 			<input type="text" class="search-box" value="exun"><button class="btn-search"><i class="fa fa-search"></i></button>
 		</form></div>
-	<div><a href="index.html"><i class="fa fa-home fa-2x top-icon" style="float: right; color: #666; padding-top: 10px;"></i></a>
+	<div><a href="index.html"><i class="fa fa-home fa-2x top-icon" style=""></i></a>
 	</div>
 
 </div>
