--- a/tamil.html
+++ b/tamil.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Orci</title>
+	<title>Orci | Tamil</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="shortcut icon" type="image" href="images/logo.png">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -18,8 +18,8 @@
 			<form method="link" action="result.html">
 			<input type="text" class="search-box" autofocus><button class="btn-search" style="cursor:pointer"><i class="fa fa-search"></i></button>
 		</form>
-		<p class="search-intro">The search engine that learns from you. <a href="#learn" class="search-link"> Learn More.</a></p>
-		<p class="abc">ORCI is offered in: <a href="index.html" class="lnk">English </a></a><a href="hi.html" class="lnk">हिंदी </a><a href="marathi.html" class="lnk">मराठी </a><a href="telugu.html" class="lnk">తెలుగు </a><a href="bengali.html" class="lnk">বাঙালি </a><a href="gujarati.html" class="lnk">ગુજરાતી </a><a href="tamil.html" class="lnk">தமிழ் </a></p>
+		<p class="search-intro">உங்களிடமிருந்து கற்றுக்கொள்ளும் தேடுபொறி <a href="#learn" class="search-link">மேலும் அறிக</a></p>
+		<p class="abc">ORCI வழங்கப்படுகிறது: <a href="index.html" class="lnk">English </a></a><a href="hi.html" class="lnk">हिंदी </a><a href="marathi.html" class="lnk">मराठी </a><a href="telugu.html" class="lnk">తెలుగు </a><a href="bengali.html" class="lnk">বাঙালি </a><a href="gujarati.html" class="lnk">ગુજરાતી </a><a href="tamil.html" class="lnk">தமிழ் </a></p>
 		</div>	
 				<span class="arrow-btm">
 			<a href="#learn" class="smoothscroll"><i class="fa fa-angle-double-down fa-2x icon-arrow"></i></a>
@@ -29,32 +29,32 @@
 	<!--compartments-->
 	<div class="c-one" id="learn">
 		<div class="c-first">
-			<p class="c-text">It learns from you</p>
-			<p class="c-text-p">Orci learns from the click through rates and patterns of it's users from all over the world.</p>
-			<button class="btn-hp fromCenter">Make ORCI your search engine</button>
+			<p class="c-text">அது உங்களிடமிருந்து கற்றுக்கொள்கிறது</p>
+			<p class="c-text-p">உலகெங்கிலும் உள்ள பயனர்களிடமிருந்து கற்றுக்கொள்கிறார்</p>
+			<button class="btn-hp fromCenter">ORCI உங்கள் தேடல் பொறியை உருவாக்கவும்</button>
 		</div>
 	</div>
 
 	<div class="c-two">
 		<div class="c-first">
-			<p class="c-text">Relevent, accurate, fast, reliable</p>
-			<p class="c-text-p">Need more?</p>
+			<p class="c-text">துல்லியமான, வேகமாக, நம்பகமான, வெளியீடு</p>
+			<p class="c-text-p">இன்னும் வேண்டும்?</p>
 			<button class="btn-hp">ORCI உங்கள் தேடல் பொறியை உருவாக்கவும்</button>
 		</div>
 	</div>
 
 	<div class="c-three">
 		<div class="c-first">
-			<p class="c-text">Supported in over 300 languages</p>
-			<p class="c-text-p">Ever thought of a search engine in a language other than english?<br>No? ORCI has it.</p>
+			<p class="c-text">300 க்கும் மேற்பட்ட மொழிகளில் ஆதரவு</p>
+			<p class="c-text-p">ஆங்கிலம் தவிர வேறு மொழியில் ஒரு தேடு பொறியை எப்போதாவது நினைத்தீர்களா? <br>இல்லை? ஆர்.சி.ஐ</p>
 			<button class="btn-hp">ORCI உங்கள் தேடல் பொறியை உருவாக்கவும்</button>
 		</div>
 	</div>
 
 	<div class="c-four">
 		<div class="c-first">
-			<p class="c-text">Product Video</p>
-			<p class="c-text-p">Howzatt?</p>
+			<p class="c-text">தயாரிப்பு வீடியோ</p>
+			<p class="c-text-p">இது ORCI</p>
 			<button class="btn-hp">ORCI உங்கள் தேடல் பொறியை உருவாக்கவும்</button>
 		</div>
 		<div>
