--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<div class="c-first">
 			<p class="c-text">Relevent, accurate, fast, reliable</p>
 			<p class="c-text-p">Need more?</p>
-			<button class="btn-hp">ORCI உங்கள் தேடல் பொறியை உருவாக்கவும்</button>
+			<button class="btn-hp">Make ORCI your search engine</button>
 		</div>
 	</div>
 
@@ -47,7 +47,7 @@
 		<div class="c-first">
 			<p class="c-text">Supported in over 300 languages</p>
 			<p class="c-text-p">Ever thought of a search engine in a language other than english?<br>No? ORCI has it.</p>
-			<button class="btn-hp">ORCI உங்கள் தேடல் பொறியை உருவாக்கவும்</button>
+			<button class="btn-hp">Make ORCI your search engine</button>
 		</div>
 	</div>
 
@@ -55,7 +55,7 @@
 		<div class="c-first">
 			<p class="c-text">Product Video</p>
 			<p class="c-text-p">Howzatt?</p>
-			<button class="btn-hp">ORCI உங்கள் தேடல் பொறியை உருவாக்கவும்</button>
+			<button class="btn-hp">Make ORCI your search engine</button>
 		</div>
 		<div>
 			<iframe class="vid" width="672" height="377" src="https://www.youtube.com/embed/O5mte-tqKmQ?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
